src/component/styled_text/snapshots/envision__component__styled_text__tests__view_bullet_list.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 532
expression: display
---
┌────────────────────────────────────────────────┐
│Items                                           │
│  • First item                                  │
│  • Second item                                 │
│  • Bold item                                   │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
