src/component/styled_text/snapshots/envision__component__styled_text__tests__view_chrome_owned_no_border.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 712
expression: display
---
Hello, embedded.
