src/component/styled_text/snapshots/envision__component__styled_text__tests__view_code_block.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 571
expression: display
---
┌────────────────────────────────────────────────┐
│  [rust]                                        │
│    let x = 42;                                 │
│    println!("{}", x);                          │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
