src/component/styled_text/snapshots/envision__component__styled_text__tests__view_empty.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 641
expression: display
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
