src/component/styled_text/snapshots/envision__component__styled_text__tests__view_heading_and_text.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 512
expression: display
---
┌────────────────────────────────────────────────┐
│Welcome                                         │
│This is a paragraph.                            │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
