src/component/styled_text/snapshots/envision__component__styled_text__tests__view_horizontal_rule.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 590
expression: display
---
┌──────────────────────────────────────┐
│Above                                 │
│──────────────────────────────────────│
│Below                                 │
│                                      │
└──────────────────────────────────────┘
