src/component/styled_text/snapshots/envision__component__styled_text__tests__view_mixed_content.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 666
expression: display
---
┌──────────────────────────────────────────────────────────┐
│Document Title                                            │
│                                                          │
│Introduction paragraph.                                   │
│──────────────────────────────────────────────────────────│
│Section                                                   │
│  • Point A                                               │
│  • Point B                                               │
│                                                          │
│    example code                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
