src/component/styled_text/snapshots/envision__component__styled_text__tests__view_numbered_list.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 554
expression: display
---
┌────────────────────────────────────────────────┐
│  1. First                                      │
│  2. Second                                     │
│  3. Third                                      │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
