src/component/styled_text/snapshots/envision__component__styled_text__tests__view_with_title.snap
---
source: src/component/styled_text/tests.rs
assertion_line: 608
expression: display
---
┌My Title──────────────────────────────┐
│Content                               │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
